list_obj to lst in Ch3

--- a/In Class Projects/Project 2 - For Loops, Lists, and Interest Rates.ipynb
+++ b/In Class Projects/Project 2 - For Loops, Lists, and Interest Rates.ipynb
@@ -1858,44 +1858,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time to double</th>\n",
+       "      <th>Rule of 70</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>69.660717</td>\n",
+       "      <td>70.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35.002789</td>\n",
+       "      <td>35.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23.449772</td>\n",
+       "      <td>23.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.672988</td>\n",
+       "      <td>17.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>14.206699</td>\n",
+       "      <td>14.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>11.895661</td>\n",
+       "      <td>11.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>10.244768</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9.006468</td>\n",
+       "      <td>8.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>8.043232</td>\n",
+       "      <td>7.777778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>7.272541</td>\n",
+       "      <td>7.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'Time to double': {1: 69.66071689357483,\n",
-       "  2: 35.0027887811465,\n",
-       "  3: 23.449772250437736,\n",
-       "  4: 17.672987685129698,\n",
-       "  5: 14.206699082890463,\n",
-       "  6: 11.895661045941875,\n",
-       "  7: 10.244768351058712,\n",
-       "  8: 9.006468342000588,\n",
-       "  9: 8.043231726932046,\n",
-       "  10: 7.272540897341713},\n",
-       " 'Rule of 70': {1: 70.0,\n",
-       "  2: 35.0,\n",
-       "  3: 23.333333333333332,\n",
-       "  4: 17.5,\n",
-       "  5: 14.0,\n",
-       "  6: 11.666666666666666,\n",
-       "  7: 10.0,\n",
-       "  8: 8.75,\n",
-       "  9: 7.777777777777778,\n",
-       "  10: 7.0},\n",
-       " 'Computational Solution': {}}"
+       "    Time to double  Rule of 70\n",
+       "1        69.660717   70.000000\n",
+       "2        35.002789   35.000000\n",
+       "3        23.449772   23.333333\n",
+       "4        17.672988   17.500000\n",
+       "5        14.206699   14.000000\n",
+       "6        11.895661   11.666667\n",
+       "7        10.244768   10.000000\n",
+       "8         9.006468    8.750000\n",
+       "9         8.043232    7.777778\n",
+       "10        7.272541    7.000000"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
-    "dct = {\"Time to double\": {r: np.log(2) / np.log(1+r/100) for r in range(1,11,1)}, \"Rule of 70\":{r:70 / r for r in range(1,11)}, \"Computational Solution\": {}}\n",
-    "dct"
+    "import pandas as pd\n",
+    "dct = {}\n",
+    "dct[\"Time to double\"] = {}\n",
+    "dct[\"Rule of 70\"] = {}\n",
+    "dct[\"Computation Solution\"] = {}\n",
+    "for r in range(1,11,1):\n",
+    "    dct[\"Time to double\"][r]  =  np.log(2) / np.log(1 + r / 100)\n",
+    "    dct[\"Rule of 70\"][r] = 70 / r\n",
+    "    \n",
+    "    FV = 1\n",
+    "    final_FV = 2\n",
+    "    rate = r / 100\n",
+    "    # computation solution\n",
+    "    while FV != final_FV:\n",
+    "        . . . \n",
+    "        t = t + margin if FV < final_FV else t - margin\n",
+    "        FV = PV * (1 + rate) ** t\n",
+    "        # the value t will be what is tested\n",
+    "        \n",
+    "    dct[\"Computation Solution\"] = t\n",
+    "#dct = {\"Time to double\": {r: np.log(2) / np.log(1+r/100) for r in range(1,11,1)}, \"Rule of 70\":{r:70 / r for r in range(1,11)}, \"Computational Solution\": {}}\n",
+    "pd.DataFrame(dct)"
    ]
   }
  ],
