Add tutorials for PdfPages/FuncAnimation

--- a/In Class Projects/Project 5 - OLS (and Linear Algebra).ipynb
+++ b/In Class Projects/Project 5 - OLS (and Linear Algebra).ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -198,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Arithmetic:\n",
     "    def __init__(self):\n",
-    "        #self.name = \"arithmetic\"\n",
-    "        pass\n",
+    "        self.name = \"arithmetic\"\n",
+    "\n",
     "    def add(self, *args):\n",
     "        total = 0\n",
     "        try:\n",
@@ -215,6 +215,7 @@
     "            return total\n",
     "        except:\n",
     "            (\"pass list or tuple of ints or floats to add()\")\n",
+    "\n",
     "    def multiply(self, *args):\n",
     "        product = 1\n",
     "        try:\n",
@@ -228,25 +229,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.Arithmetic'>\n",
-      "9\n",
+      "<__main__.Arithmetic object at 0x000001FABE7A3488>\n",
+      "10\n",
       "24\n",
-      "{'__module__': '__main__', '__init__': <function Arithmetic.__init__ at 0x0000026BBFAC6048>, 'add': <function Arithmetic.add at 0x0000026BBFAC6318>, 'multiply': <function Arithmetic.multiply at 0x0000026BBFAC64C8>, '__dict__': <attribute '__dict__' of 'Arithmetic' objects>, '__weakref__': <attribute '__weakref__' of 'Arithmetic' objects>, '__doc__': None}\n"
+      "arithmetic\n",
+      "{'name': 'arithmetic'}\n"
      ]
     }
    ],
    "source": [
-    "arithmetic = Arithmetic\n",
+    "arithmetic = Arithmetic()\n",
     "print(arithmetic)\n",
     "print(arithmetic.add(1,2,3,4))\n",
     "print(arithmetic.multiply(1,2,3,4))\n",
+    "print(arithmetic.name)\n",
     "print(arithmetic.__dict__)"
    ]
   },
@@ -263,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2320,7 +2323,7 @@
        "[172 rows x 29 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
