--- a/Textbook/Chapter 7 - Building an OLS Regression Model.ipynb
+++ b/Textbook/Chapter 7 - Building an OLS Regression Model.ipynb
@@ -434,7 +434,8 @@
     "    def __init__(self):  \n",
     "        self.stats = stats()  \n",
     "          \n",
-    "    def OLS(self, reg_name, data, y_name, beta_names, min_val = 0,  \n",
+    "    def OLS(self, reg_name, data, y_name, beta_names, \n",
+    "            min_val = 0,  \n",
     "                max_val = None, constant = True):  \n",
     "        self.min_val = min_val  \n",
     "        if max_val != None:  \n",
@@ -575,7 +576,8 @@
     "#econFreedomRegression.py\n",
     "# . . .\n",
     "y_var = [\"GDP per Capita (PPP)\"]\n",
-    "x_vars = [\"Trade Freedom\", \"Property Rights\", \"Inflation (%)\",\n",
+    "x_vars = [\"Trade Freedom\", \"Property Rights\", \n",
+    "          \"Inflation (%)\",\n",
     "          \"Public Debt (% of GDP)\"]\n",
     "\n",
     "reg.OLS(\"GDP per Capita\", data, y_var, x_vars)"
@@ -2733,7 +2735,12 @@
     "hidePrompt": false
    },
    "source": [
-    "Next we will create the regression.py file. This will contain the regression program that we will call from _econFreedomRegression.py_. For now, import pandas and build the class as demonstrated below:"
+    "Next we will create the regression.py file. This will contain the regression program that we will call from _econFreedomRegression.py_. For now, import pandas and build the class as demonstrated below.\n",
+    "\n",
+    "First, we must estimate the beta vector, $\\beta$ and use this to estimate predicted values of y:\n",
+    "\n",
+    "$y ̂ = X\\beta$\n",
+    ":"
    ]
   },
   {
