--- a/Projects/Helipad/Price Discovery Walkthrough.ipynb
+++ b/Projects/Helipad/Price Discovery Walkthrough.ipynb
@@ -79,11 +79,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "heli.launchCpanel()"
+    "#heli.launchCpanel()"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Everything above Log Endowment Ratio is the default template for Cpanel. You can see that Log Endowment Ratio is a slider with range that we specified.\n",
@@ -95,20 +95,8 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: UserWarning: Parameter 'ratio' already defined. Overriding…\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "heli.addParameter(\"ratio\", \"Log Endowment Ratio\", \"slider\", \n",
-    "                  dflt = 0, opts = {\"low\": -3, \"high\":3, \"step\":.5})\n",
-    "\n",
     "# keyword to change to num instead agents\n",
     "# next, target values on the default slider for Number of Agents\n",
     "# makes sure that slider moves in incriments of 2\n",
@@ -130,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "heli.launchCpanel()"
+    "#heli.launchCpanel()"
    ]
   },
   {
@@ -156,7 +144,7 @@
     {
      "data": {
       "text/plain": [
-       "<helipad.helpers.Item at 0x2900013aa88>"
+       "<helipad.helpers.Item at 0x187a6b86c48>"
       ]
      },
      "execution_count": 7,
@@ -295,7 +283,7 @@
     {
      "data": {
       "text/plain": [
-       "<helipad.helpers.Item at 0x2900013a908>"
+       "<helipad.helpers.Item at 0x187a6b7d408>"
       ]
      },
      "execution_count": 11,
@@ -313,11 +301,26 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Stop the model when we're basically equilibrated\n",
+    "def stopCondition(model):\n",
+    "\treturn model.t > 1 and model.data.getLast('demand-shmoo') < 20 and model.data.getLast('demand-soma') < 20\n",
+    "heli.param('stopafter', stopCondition)\n",
+    "\n",
+    "for p in ['demand', 'utility']: heli.plots[p].active(True)\n",
+    "heli.param('updateEvery', 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01d2d6f77b6243a29944af0f526807b2",
+       "model_id": "263fe100a9454757a977b627dba68cd3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -331,12 +334,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99713c10490945b08384ae91fe8fd2bb",
+       "model_id": "9a1da98aa1c948ec99170eecd512d12b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(Checkbox(value=True, description='Stop on period', description_tooltip='', layout=Layout(width=…"
+       "HBox(children=(Checkbox(value=True, description='Stop on period', description_tooltip='', disabled=True, layou…"
       ]
      },
      "metadata": {},
@@ -345,7 +348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7598e051962436e85b6eb11fb0db1b7",
+       "model_id": "3c3f7814a497414fb27578e47f21525e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -359,12 +362,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "131956fb5f3a49cd9a419852c89ac13c",
+       "model_id": "81ca8be9d52c4a5eacf96265d8be9945",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntSlider(value=4, description='Refresh Every __ Periods', description_tooltip='', max=9, reado…"
+       "HBox(children=(IntSlider(value=0, description='Refresh Every __ Periods', description_tooltip='', max=9, reado…"
       ]
      },
      "metadata": {},
@@ -373,7 +376,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aeb481db3da244d08b092434cbc20b72",
+       "model_id": "9c77ac2be24d43069d52dad62da5e696",
        "version_major": 2,
        "version_minor": 0
       },
@@ -387,7 +390,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ff4040b573c48f8ba2a343f4cef61e5",
+       "model_id": "395d7579c7874deb9b363600109335b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -401,12 +404,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01156ef8fd964e409af95856a0a3de7d",
+       "model_id": "0ece6412af914ec090848094d960299c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Accordion(children=(HBox(children=(interactive(children=(Checkbox(value=False, description='Demand', descripti…"
+       "Accordion(children=(HBox(children=(interactive(children=(Checkbox(value=True, description='Demand', descriptio…"
       ]
      },
      "metadata": {},
@@ -415,7 +418,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db285b22d40248018011dcc85241908f",
+       "model_id": "f8411711b9384392a2aec4a6f2daf346",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,6 +432,51 @@
    ],
    "source": [
     "heli.launchCpanel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e5c024e9d604fa5833dd3f16c701882",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(runButton(description='Pause', icon='pause', style=ButtonStyle()), progressBar(value=0.0, max=1…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Task exception was never retrieved\n",
+      "future: <Task finished coro=<Helipad.run() done, defined at C:\\ProgramData\\Anaconda3\\lib\\site-packages\\helipad\\model.py:462> exception=NameError(\"name 'somaDemand' is not defined\")>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\helipad\\model.py\", line 465, in run\n",
+      "    t = self.step()\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\helipad\\model.py\", line 447, in step\n",
+      "    self.doHooks([prim+'Match', 'match'], [agents, prim, self, self.stage])\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\helipad\\model.py\", line 377, in doHooks\n",
+      "    r = self.doHooks(f, args)\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\helipad\\model.py\", line 382, in doHooks\n",
+      "    for f in self.hooks[place]: r = f(*args)\n",
+      "  File \"<ipython-input-9-b23196b18e6f>\", line 24, in match\n",
+      "    if abs(somaDemand) > min_trade_quantity and abs(shmooDemand) > min_trade_quantity:\n",
+      "NameError: name 'somaDemand' is not defined\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "heli.launchPlots()"
    ]
   }
  ],
