Proejct 6 Addendum-panel data

--- a/Textbook/Chapter 8 - Advanced Data Analysis.ipynb
+++ b/Textbook/Chapter 8 - Advanced Data Analysis.ipynb
@@ -37,7 +37,9 @@
     "\n",
     "# index_col = [0,2] will select  countrycode as the primary index and year as \n",
     "# the secondary index\n",
-    "data = pd.read_excel(\"mpd2018.xlsx\", sheet_name = \"Full data\", index_col = [0,2])"
+    "data = pd.read_excel(\"mpd2018.xlsx\", \n",
+    "                     sheet_name = \"Full data\", \n",
+    "                     index_col = [0,2])"
    ]
   },
   {
@@ -1025,12 +1027,15 @@
     "    for i in range(len(pair)):  \n",
     "        country = pair[i]  \n",
     "        linestyle = linestyles[i]  \n",
-    "        data.loc[country,:][\"cgdppc\"].dropna().plot.line(ax = ax,  \n",
+    "        data.loc[country,:][\"cgdppc\"].dropna(\n",
+    "        ).plot.line(ax = ax,  \n",
     "               label = country, linestyle = linestyle)  \n",
     "    plt.xlim([1825, max(years)])  \n",
     "    plt.rcParams.update({\"legend.fontsize\": 25, \"legend.handlelength\": 2})  \n",
     "    plt.rcParams.update({\"font.size\": 25})  \n",
-    "    plt.ylabel(\"$Real$ $GDP$ $Per$ $Capita$\\n2011 U.S. Dollars\", fontsize=36)  \n",
+    "    plt.ylabel(\n",
+    "        \"$Real$ $GDP$ $Per$ $Capita$\\n2011 U.S. Dollars\",\n",
+    "        fontsize=36)  \n",
     "    plt.legend()  \n",
     "    plt.show()  \n",
     "    plt.close()  "
@@ -1065,7 +1070,8 @@
     "                           sheet_name = \"EFW Panel Data 2019 Report\",  \n",
     "                           header = [2], index_col = [2, 1], parse_dates=False)  \n",
     "# drop any empty column and any empty row  \n",
-    "fraser_data = fraser_data.dropna(axis=0, thresh=1).dropna(axis=1, thresh=1)  \n",
+    "fraser_data = fraser_data.dropna(\n",
+    "    axis=0, thresh=1).dropna(axis=1, thresh=1)  \n",
     "  \n",
     "maddison_data = pd.read_excel(\"mpd2018.xlsx\", sheet_name = \"Full data\",   \n",
     "                              index_col = [0,2])#, parse_dates = True)  \n"
@@ -2136,8 +2142,8 @@
     "#indicatorVariable.py\n",
     "import pandas as pd  \n",
     "  \n",
-    "def create_indicator_variable(data, indicator_name, index_name,   \n",
-    "                              target_index_list):  \n",
+    "def create_indicator_variable(data, indicator_name, \n",
+    "                              index_name, target_index_list):  \n",
     "    # Prepare column with name of indicator variable  \n",
     "    data[indicator_name] = 0  \n",
     "    # for each index whose name matches an entry in target_index_list  \n",
@@ -2147,7 +2153,8 @@
     "            index_name) == index, [indicator_name]] = 1  \n",
     "        \n",
     "# Import data with \"ISO_Code\" and \"Year\" as index columns  \n",
-    "data = pd.read_csv(\"fraserDataWithRGDPPC.csv\", index_col = [\"ISO_Code\", \"Year\"],   \n",
+    "data = pd.read_csv(\"fraserDataWithRGDPPC.csv\", \n",
+    "                   index_col = [\"ISO_Code\", \"Year\"],   \n",
     "                   parse_dates = True)  \n",
     "  \n",
     "# select \"ISO_Code\" from names of double index  \n",
@@ -2155,11 +2162,14 @@
     "indicator_name = \"North America\"  \n",
     "# Cuba, Grenada, Saint Kitts, Saint Lucia, Saint Vincent are missing   \n",
     "# from Fraser Data  \n",
-    "countries_in_north_america = [\"BHS\", \"BRB\", \"BLZ\", \"CAN\", \"CRI\", \"DOM\", \"SLV\",  \n",
-    "                              \"GTM\", \"HTI\", \"HND\", \"JAM\", \"MEX\", \"NIC\", \"PAN\",  \n",
-    "                              \"TTO\", \"USA\"]  \n",
-    "create_indicator_variable(data = data, indicator_name = indicator_name,  \n",
-    "    index_name = index_name, target_index_list = countries_in_north_america)"
+    "countries_in_north_america = [\n",
+    "    \"BHS\", \"BRB\", \"BLZ\", \"CAN\", \"CRI\", \"DOM\", \"SLV\",\n",
+    "    \"GTM\", \"HTI\", \"HND\", \"JAM\", \"MEX\", \"NIC\", \"PAN\",\n",
+    "    \"TTO\", \"USA\"]  \n",
+    "create_indicator_variable(data = data, \n",
+    "    indicator_name = indicator_name,  \n",
+    "    index_name = index_name, \n",
+    "    target_index_list = countries_in_north_america)"
    ]
   },
   {
