plotting discrete variables with color

--- a/Textbook/Chapter 8 - Advanced Data Analysis.ipynb
+++ b/Textbook/Chapter 8 - Advanced Data Analysis.ipynb
@@ -2581,7 +2581,8 @@
     "# choose numbers of divisions  \n",
     "n = 5  \n",
     "# import data  \n",
-    "data = pd.read_csv(\"fraserDataWithRGDPPC.csv\", index_col = [\"ISO_Code\", \"Year\"],   \n",
+    "data = pd.read_csv(\"fraserDataWithRGDPPC.csv\", \n",
+    "                   index_col = [\"ISO_Code\", \"Year\"],   \n",
     "                   parse_dates = True)  \n",
     "#create column identifying n-tile rank  \n",
     "quantile_var = \"RGDP Per Capita\"  \n",
