--- a/Textbook/Chapter 8 - Advanced Data Analysis.ipynb
+++ b/Textbook/Chapter 8 - Advanced Data Analysis.ipynb
@@ -1031,8 +1031,8 @@
     "        data.loc[country,:][\"cgdppc\"].dropna(\n",
     "        ).plot.line(ax = ax,  \n",
     "               label = country, linestyle = linestyle)  \n",
-    "      \n",
-    "    plt.rcParams.update({\"legeplt.xlim([1825, max(years)])nd.fontsize\": 25, \"legend.handlelength\": 2})  \n",
+    "    plt.xlim([1825, max(years)])\n",
+    "    plt.rcParams.update({\"legend.fontsize\": 25, \"legend.handlelength\": 2})  \n",
     "    plt.rcParams.update({\"font.size\": 25})  \n",
     "    plt.ylabel(\n",
     "        \"$Real$ $GDP$ $Per$ $Capita$\\n2011 U.S. Dollars\",\n",
@@ -8148,10 +8148,10 @@
     "            f_stat = ((sser - sseu) / (dfn)) / (sseu / (dfd))  \n",
     "            f_crit_val = 1 - f.cdf(f_stat,dfn = dfn, dfd = dfd)  \n",
     "            #make dictionary?  \n",
-    "            f_test_label = \"\"  \n",
+    "            f_test_label = \"h_0:\"  \n",
     "            for key in unrestr_var_names:  \n",
     "                if key not in restr_var_names:  \n",
-    "                    f_test_label = f_test_label + str(key) + \" != \"  \n",
+    "                    f_test_label = f_test_label + str(key) + \" == \"  \n",
     "            f_test_label = f_test_label + \"0\"  \n",
     "            res_dict = {\"f-stat\":[f_stat],  \n",
     "                        \"p-value\":[f_crit_val],  \n",
@@ -8319,7 +8319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -8394,7 +8394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -8472,7 +8472,7 @@
       "Obs.                 2184.000000\n",
       "DOF                  2030.000000\n",
       "                                                                \n",
-      "AGO != ALB != ARE != ARG != ARM != AUS != AUT !...              \n",
+      "h_0:AGO == ALB == ARE == ARG == ARM == AUS == A...              \n",
       "f-stat                                              5.013193e+00\n",
       "p-value                                             1.110223e-16\n",
       "dfn                                                 1.510000e+02\n",
@@ -8512,7 +8512,7 @@
       "Obs.                 2032.000000\n",
       "DOF                  1881.000000\n",
       "                                                               \n",
-      "AGO != ALB != ARE != ARG != ARM != AUS != AUT !...             \n",
+      "h_0:AGO == ALB == ARE == ARG == ARM == AUS == A...             \n",
       "f-stat                                                 1.657733\n",
       "p-value                                                0.000003\n",
       "dfn                                                  148.000000\n",
