--- a/Projects/Macroeconomics/Chapter 6 - Aggregate Demand.ipynb
+++ b/Projects/Macroeconomics/Chapter 6 - Aggregate Demand.ipynb
@@ -970,6 +970,9 @@
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
   },
+  "nteract": {
+   "version": "nteract-on-jupyter@2.1.3"
+  },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
