class notes, update syllabi

--- a/In Class Projects/Project 10 - Working with Geocoded Data.ipynb
+++ b/In Class Projects/Project 10 - Working with Geocoded Data.ipynb
@@ -50,9 +50,9 @@
     "\n",
     "### Downloading the COVID-19 data\n",
     "\n",
-    "We will use two datasets. First, we will import a shapefile to use with *geopandas*, which we will later use to generate a county level map that tracks COVID-19. The shapefile is provide for you in the Github folder housing this post. You can also download shapefiles from the U.S. Census [website](https://www.census.gov/geographies/mapping-files/time-series/geo/carto-boundary-file.html). We will download Johns Hopkins's COVID-19 data from the Associated Press's [account](https://data.world/associatedpress/johns-hopkins-coronavirus-case-tracker) at data.world using their [Python module](https://data.world/integrations/python). Follow [these instructions](https://github.com/datadotworld/data.world-py/) to install the  *datadotworld* module and access their API.\n",
+    "We will use two datasets. First, we will import a shapefile to use with *geopandas*, which we will later use to generate a county level map that tracks COVID-19. The shapefile is provide for you in the Github folder housing this post. You can also download shapefiles from the U.S. Census [website](https://www.census.gov/geographies/mapping-files/time-series/geo/carto-boundary-file.html). We will download Johns Hopkins's COVID-19 data from the Associated Press's [account](https://data.world/associatedpress/johns-hopkins-coronavirus-case-tracker) at data.world using their [Python module](https://data.world/integrations/python). Follow [these instructions](https://github.com/datadotworld/data.world-py/) to install the  *datadotworld* module and access their API. **You must provide an authorization token for datadotworld. See instructions at the link above under the _Configure_ heading**\n",
     "\n",
-    ">*Datadotworld* may be useful efficiently collecting data for class projects, so keep this libary in mind as you make plans for your project."
+    "*Datadotworld* may be useful efficiently collecting data for class projects, so keep this libary in mind as you make plans for your project."
    ]
   },
   {
@@ -61,9 +61,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install pandas-datareader\n",
-    "!pip install pandas-datareader\n",
-    "!pip install pandas-datareader\n"
+    "!pip install GDAL-3.3.0-cp38-cp38-win_amd64.whl\n",
+    "!pip install Fiona-1.8.20-cp38-cp38-win_amd64.whl\n",
+    "!pip install Shapely-1.7.1-cp38-cp38-win_amd64.whl\n",
+    "!pip install datadotworld"
    ]
   },
   {
@@ -5690,6 +5691,7 @@
     "2. Select a different time series data (e.g., unemployment, incomes, etc...) set at the county level that has at least 20 observations. Create a map of the latest obervation of the data. Like with the covid data in (1), create a file that holds a visualization for every observation.\n",
     "\n",
     "*ECON 611 Only*\n",
+    "\n",
     "3. Download and plot data relating to the magnitude of the [policy response](https://github.com/OxCGRT/covid-policy-tracker) by U.S. state or by all nations across the globe. Plot the data on a map as it changes over time using an MP4 file or a GIF. "
    ]
   }
