--- a/In Class Projects/Reference Sheet for Github.ipynb
+++ b/In Class Projects/Reference Sheet for Github.ipynb
@@ -14,6 +14,38 @@
     "* *git config --global user.name \"Your Name\"*\n",
     "* *git config --global user.email \"YourAddress@email.com\"*\n",
     "\n",
+    "Next, you need to set up your SSH key for security purposes. Beginning in August 2021, GitHub requires you to us an SSH key. Watch this tutorial on YouTube, or run the cell and press play below if you are viewing in Jupyter. \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/WgZIv5HI44o\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/WgZIv5HI44o\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now create a repository on the GitHub website. Then clone the repository on your own hard drive using the command\n",
     "\n",
     "* *git clone repository-url*\n",
@@ -56,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
