--- a/In Class Demonstrations/Project 1 - Chapter 1 - Essentials.ipynb
+++ b/In Class Demonstrations/Project 1 - Chapter 1 - Essentials.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b6e8e3f5",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e65e53c5",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "3004cc65",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "0657dd42",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "f1f81231",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "3e152a5b",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "047b2a27",
    "metadata": {},
    "outputs": [
@@ -191,6 +191,78 @@
    "source": [
     "print(line1,line2,line3,line4, sep = \"\\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "928ade8c",
+   "metadata": {},
+   "source": [
+    "By using the option, sep = \"\\n\", each comma is interpretted as a new line. This would be the same as adding \"\\n\" to every line."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "40da5d4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You thought it would be easy\n",
+      "You thought it wouldn't be strange\n",
+      "But then you started coding\n",
+      "Things never were the same\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(line1+\"\\n\", line2 + \"\\n\", line3 + \"\\n\", line4 + \"\\n\", sep = \"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e6c95ab",
+   "metadata": {},
+   "source": [
+    "# Introducing Jupyter for Faria\n",
+    "\n",
+    "We went over basic introductory material yesterday, so catching up is a breeze!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d791572f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You thought it would be easy\n",
+      "You thought it wouldn't be strange\n",
+      "But then you started coding\n",
+      "Things never were the same\n",
+      "And now we are building for the future\n"
+     ]
+    }
+   ],
+   "source": [
+    "line5 = \"And now we are building for the future\"\n",
+    "\n",
+    "print(line1, line2, line3, line4, line5, sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d11af94",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
