--- a/In Class Projects/Project 1 - Chapter 1 - The Essentials.ipynb
+++ b/In Class Projects/Project 1 - Chapter 1 - The Essentials.ipynb
@@ -889,8 +889,8 @@
     "3. Find the list of escape sequences in [Section 2.4](https://docs.python.org/3/reference/lexical_analysis.html#literals).  create a string that uses at least 4 different escape sequences.\n",
     "4. Add an _integer_ and a _float_ together. Is the final number an _integer_ or a _float_?\n",
     "5. Add 2 ** 1024 + 1.5. What is the outcome? Why? hint: Try adding .5, 1, and  1.1 instead of 1.5.\n",
-    "6. import the string library with the script **_import_** _string_. Print  **string.\\__dict\\__** . What is the output? If you do not understand the meaning,  search \"python class \\__\\__dict\\__\\__\" online and find an explanation.\n",
-    "7. Call at least 5 of the results from **string.\\__dict\\__**.\n",
+    "6. import the string library with the script **_import_** _string_. Print  **string.\\_\\_dict\\_\\_** . What is the output? If you do not understand the meaning,  search \"python class \\_\\_dict\\_\\_\" online and find an explanation.\n",
+    "7. Call at least 5 of the results from **string.\\_\\_dict\\_\\_**.\n",
     "8. Concatenate 3 distinct strings\n"
    ]
   }
