Reminder to review homework problems

--- a/In Class Demonstrations/Project 1 - Chapter 1 - Essentials.ipynb
+++ b/In Class Demonstrations/Project 1 - Chapter 1 - Essentials.ipynb
@@ -613,6 +613,16 @@
    "source": [
     "2. ** 1024"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4f2cb1b",
+   "metadata": {},
+   "source": [
+    "# Homework\n",
+    "\n",
+    "Make sure that you review the homework problems in Project 1 from the \"In Class Projects\" folder. These problems will not be collected, but they will be helpful to you."
+   ]
   }
  ],
  "metadata": {
