--- a/In Class Projects/Reference Sheet for Github.ipynb
+++ b/In Class Projects/Reference Sheet for Github.ipynb
@@ -6,6 +6,36 @@
    "source": [
     "# GitHub Pointers\n",
     "Follow the instructions from this [video](https://www.youtube.com/watch?v=J_Clau1bYco&t=876s).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/J_Clau1bYco?start=876\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/J_Clau1bYco?start=876\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "To reiterate the main points, before you start your first project, make sure that you have created an account on [GitHub](https://github.com). Download and install [Git](https://git-scm.com/downloads) for your system. After you've done these, follow the instruction in this video to see how to connect the Git software on your computer to your own account.\n",
     "\n",
@@ -15,7 +45,6 @@
     "* *git config --global user.email \"YourAddress@email.com\"*\n",
     "\n",
     "Next, you need to set up your SSH key for security purposes. Beginning in August 2021, GitHub requires you to us an SSH key. [Watch this tutorial](https://www.youtube.com/embed/WgZIv5HI44o) on YouTube, or run the cell and press play below if you are viewing in Jupyter. \n",
-    "\n",
     "\n"
    ]
   },
