--- a/Textbook/Chapter 7 - Building an OLS Regression Model.ipynb
+++ b/Textbook/Chapter 7 - Building an OLS Regression Model.ipynb
@@ -2175,7 +2175,7 @@
     "hidePrompt": false
    },
    "source": [
-    "The diagonals of the covariance matrix represent the squared standard errors for each exogenous variable. The standard what we will use to calculate t-statistics and p-values. The t-statisitic of a coefficient is found by comparing the size of the estimated coefficient to its standard error:\n",
+    "The diagonals of the covariance matrix represent the squared standard errors for each exogenous variable. The standard error what we will use to calculate t-statistics and p-values. The t-statisitic of a coefficient is found by comparing the size of the estimated coefficient to its standard error:\n",
     "\n",
     "$tstat_{\\beta_i}=\\frac{\\beta_i}{SE_{\\beta_i}}$\n",
     "\n",
@@ -2622,13 +2622,14 @@
     "For similar purposes, we will include the joint F-test. This compares the explanatory power of two regressions, revealing whether or not the inclusion of additional variables is actually improving explanatory power of the regression. \n",
     "\n",
     "### Adjusted R-Squared\n",
-    "Although the R2 is a useful measure to understand the quality of the explanation provided by the  selected exogenous variables. Recall that:\n",
+    "Although the $R^2$ is a useful measure to understand the quality of the explanation provided by the selected exogenous variables. Recall that:\n",
     "\n",
     "$R^2 = \\frac{SSR}{SST}$\n",
     "\n",
-    "$R^2 = 1 - \\frac{\\frac{SSE}{n - k}}{\\frac{SST}{n-1}}$\n",
     "\n",
-    "Notice that as the degrees of freedom decrease, the numerator necessarily decreases as well. Although it is not always appropriate to use the adjusted $R^2$, it is often useful to help gauge whether or not a marginal addition of a variable improves explanatory power of a regression."
+    "Notice that as the degrees of freedom decrease, the numerator necessarily decreases as well. Although it is not always appropriate to use the adjusted $R^2$, it is often useful to help gauge whether or not a marginal addition of a variable improves explanatory power of a regression.\n",
+    "\n",
+    "${R^2}_{Adjusted} = 1 - \\frac{\\frac{SSE}{n - k}}{\\frac{SST}{n-1}}$\n"
    ]
   },
   {
