add in class demonstration

--- a/In Class Projects/Project 5 - Building Functions and Visualizing Distribution (Complete).ipynb
+++ b/In Class Projects/Project 5 - Building Functions and Visualizing Distribution (Complete).ipynb
@@ -14,7 +14,7 @@
     "* Statistical functions that we created in chapter 3\n",
     "\n",
     "You will learn to:\n",
-    "* Import financial data from *Yahoo Finance* using *pandas_dataread*\n",
+    "* Import financial data from *Yahoo Finance* using *pandas_datareader*\n",
     "* Calculate the daily percent change of each stocks value (from close to close)\n",
     "* Create a single datframe holding the summary statistics of each variable in a dataframe\n",
     "* Plot the observed data and the transformed data to observe changes over time\n",
