--- a/In Class Projects/Project 4 - Chapter 5 - Introduction to numpy, pandas, and matplotlib.ipynb
+++ b/In Class Projects/Project 4 - Chapter 5 - Introduction to numpy, pandas, and matplotlib.ipynb
@@ -1881,20 +1881,24 @@
     "plt.rcParams['axes.ymargin'] = 0 \n",
     "plt.rcParams[\"font.size\"] = 30\n",
     "fig, ax = plt.subplots(figsize = (40, 24))\n",
-    "monte_carlo_sim_df.plot.line(legend = False, marker = \".\", markersize = .1, \n",
-    "                             color = \"k\", alpha = .1, ax = ax)\n",
+    "monte_carlo_sim_df.plot.line(legend = False, \n",
+    "                             marker = \".\", \n",
+    "                             markersize = .1, \n",
+    "                             color = \"k\", \n",
+    "                             alpha = .1, \n",
+    "                             ax = ax)\n",
     "plt.show()\n",
     "plt.close()\n",
     "\n",
-    "fig, ax = plt.subplots(figsize = (40, 24))\n",
-    "monte_carlo_sim_df.iloc[-1].hist(bins = 25, density = True,\n",
-    "                               ax = ax)\n",
-    "# set vertical axis values as percent\n",
-    "y_vals = ax.get_yticks()\n",
-    "ax.set_yticklabels([str(int(y * 100))+ \"%\" for y in y_vals]) \n",
+    "# fig, ax = plt.subplots(figsize = (40, 24))\n",
+    "# monte_carlo_sim_df.iloc[-1].hist(bins = 25, density = True,\n",
+    "#                                ax = ax)\n",
+    "# # set vertical axis values as percent\n",
+    "# y_vals = ax.get_yticks()\n",
+    "# ax.set_yticklabels([str(int(y * 100))+ \"%\" for y in y_vals]) \n",
     "\n",
-    "plt.show()\n",
-    "plt.close()"
+    "# plt.show()\n",
+    "# plt.close()"
    ]
   },
   {
