update Class Demonstrations

--- a/Projects/SMP Data/Lending.ipynb
+++ b/Projects/SMP Data/Lending.ipynb
@@ -246,9 +246,7 @@
    "outputs": [],
    "source": [
     "pct_change_df = data.pct_change(4).mul(100)\n",
-    "pct_change_diff_df=pct_change_df.diff(4).mul(100)\n",
-    "ma_data = data.rolling(4 * 3).mean()\n",
-    "ma_pct_change = ma_data.pct_change(4).mul(100)"
+    "pct_change_diff_df=pct_change_df.diff(4).mul(100)"
    ]
   },
   {
