update class projects/demonstration

--- a/In Class Projects/Project 10 - Chapter 8 - Advanced Data Analysis.ipynb
+++ b/In Class Projects/Project 10 - Chapter 8 - Advanced Data Analysis.ipynb
@@ -7,7 +7,7 @@
     "hidePrompt": true
    },
    "source": [
-    "# Chapter 8: Advanced Data Analysis\n",
+    "# Project 10: Chapter 8: Advanced Data Analysis\n",
     "In the last few chapters, we have become comfortable with the idea of building our own functions. These can become quite complex, as we have learned with the construction of the OLS regression in chapter 7. We will continue developing our tool set for working with and managing large sets of data by integrating data from different data sets. We will introduce the multi index to facilitate this process. Among other things, the multi index is useful for including identifiers across time and region or principality. We will also use the multi index to perform a panel regression that controls for level effects between different countries.\n",
     "\n",
     "## Using a Double Index to Work with Panel Data\n",
@@ -4996,38 +4996,6 @@
     "### Exercises\n",
     "\n",
     "1. The regression results tend to generate residuals that are correlated with the dependent variable. This indicates that the regression is missing an explanatory variable that better captures the magnitude of changes in RGDP. Find a variable that improves prediction of RGDP per capita. Rerun all results presented in the panel regression section with this variable included."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg = Regression()\n",
-    "for key, data in data_dict.items():\n",
-    "    # call OLS and Panel for comparison\n",
-    "    data = data_dict[key]\n",
-    "    reg.OLS(reg_name = key, data = data.dropna(),\n",
-    "            y_name = y_name, beta_names = X_names)\n",
-    "    print(key, reg.estimates, sep = \"\\n\")\n",
-    "    print(reg.stats_DF)\n",
-    "    panel_name = key + \" panel\"\n",
-    "    reg.panel_regression(reg_name = panel_name, data = data.dropna(),\n",
-    "            y_name = y_name, X_names = X_names, entity = True, time = True)\n",
-    "    print(key, reg.estimates, sep = \"\\n\")\n",
-    "    print(reg.stats_DF)    \n",
-    "    joint_f_test = reg.joint_f_test(key, key + \" panel\")\n",
-    "    print(joint_f_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg.indicator_lists"
    ]
   }
  ],
