--- a/In Class Projects/Project 9 - Partial Correlations and Directed Acyclic Graphs.ipynb
+++ b/In Class Projects/Project 9 - Partial Correlations and Directed Acyclic Graphs.ipynb
@@ -340,11 +340,11 @@
    "source": [
     "# Partial Correlation\n",
     "\n",
-    "All of the variables appear to be correlated. Yet, we should be suspicious of the correlation between Z and Q. Q does not cause Z directly. Its causal effect on Z is intermediated by X and Y. Likewise, X and Y appear to be strongly correlated, but we know that these variables do not cause one another. They have a common cause.\n",
+    "All of the variables appear to be correlated. Yet, we should be suspicious of the correlation between $Z$ and $Q$. $Q$ does not cause $Z$ directly. Its causal effect on Z is intermediated by $X$ and $Y$. Likewise, $X$ and $Y$ appear to be strongly correlated, but we know that these variables do not cause one another. They have a common cause.\n",
     "\n",
-    "To calculate correlation between two variables while controlling for the effects of the remaining variables, we calculate the partial correlation. For example, the partial correlation of Q and X is an estimate of the joint probability $P(Q|X=x,Y,Z)$. \n",
+    "To calculate correlation between two variables while controlling for the effects of the remaining variables, we calculate the partial correlation. For example, the partial correlation of $Q$ and $X$ is an estimate of the correlation of the two variables controlling for $Y$ and $Z$: $\\rho_{XY.YZ}$. \n",
     "\n",
-    "It is convenient that a partial correlation can be calculated using a set of OLS regressions equal in number to the number of variables, with each serving as the endogenous variable to be estimated by the remaing variables and a constant. We calculate the partial correlation of two variables by calculating the correlation of the error terms from the regressions that estimate Q and X as dependent variables, given the example in the previous paragraph. Thus, in our example, we can calculate partial correlats with up to 5 different OLS equations. If all 5 equations are used, then the partial correlation will control for the remaining 3 variables. As we will see, there may be reason to exclude one or more controls variables."
+    "It is convenient that a partial correlation can be calculated using a set of OLS regressions equal in number to the number of variables, with each serving as the endogenous variable to be estimated by the remaing variables and a constant. We calculate the partial correlation of two variables by calculating the correlation of the error terms from the regressions that estimate $Q$ and $X$ as dependent variables, given the example in the previous paragraph. Thus, in our example, we can calculate partial correlats with up to 5 different OLS equations. If all 5 equations are used, then the partial correlation will control for the remaining 3 variables. As we will see, there may be reason to exclude one or more controls variables."
    ]
   },
   {
