add link to pgmpy pc algorithm

--- a/In Class Projects/Project 9 - Partial Correlations and Directed Acyclic Graphs.ipynb
+++ b/In Class Projects/Project 9 - Partial Correlations and Directed Acyclic Graphs.ipynb
@@ -1044,7 +1044,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that not every partial correlation int he matrix is significant. In particular, we can be certain that links $PQ$ and $QZ$ will not be present in our graphs.\n",
+    "We see that not every partial correlation in the matrix is significant. In particular, we can be certain that links $PQ$ and $QZ$ will not be present in our graphs.\n",
     "\n",
     "## Using partial correlations to build a causal skeleton\n",
     "Now that we understand how to generate partial correlations, we can use this concept to generate a causal skeleton. We follow a simple algorithm in this step.\n",
@@ -1243,9 +1243,11 @@
    "source": [
     "# Estimating a Directed Acyclic Graph\n",
     "\n",
-    "Now that we have learned to generate the structure of an undirected graph, we have enough familiarity with the concept of a directed acyclc graph (DAG) that we can use the __*pgmpy*__ module to construct a graph with directed edges.\n",
+    "Now that we have learned to generate the structure of an undirected graph, we have enough familiarity with the concept of a directed acyclc graph (DAG) that we can use the __*pgmpy*__ module to construct a graph with directed edges.\\*\n",
     "\n",
-    "We will use the parallel PC algorithm to orient edges. No edge will be left undirected."
+    "We will use the parallel PC algorithm to orient edges. No edge will be left undirected. \n",
+    "\n",
+    "\\*A number of different algorithms are used to direct edges. For more information, see the script from [*pgmpy'*s PC algorithm module](https://github.com/pgmpy/pgmpy/blob/dev/pgmpy/estimators/PC.py)."
    ]
   },
   {
