--- a/In Class Projects/Project 10 - Chapter 8 - Advanced Data Analysis.ipynb
+++ b/In Class Projects/Project 10 - Chapter 8 - Advanced Data Analysis.ipynb
@@ -1018,9 +1018,11 @@
     "import datetime\n",
     "year = 2000\n",
     "\n",
-    "plot_data = data[data.index.get_level_values(\"Year\")== datetime.datetime(year,1,1)]\n",
+    "plot_data = data[\n",
+    "    data.index.get_level_values(\"Year\")== datetime.datetime(year,1,1)]\n",
     "fig, ax = plt.subplots(figsize = (24, 16))\n",
-    "plot_data.plot.scatter(x = \"EFW\", y = \"RGDP Per Capita\", c = \"North America\",\n",
+    "plot_data.plot.scatter(\n",
+    "    x = \"EFW\", y = \"RGDP Per Capita\", c = \"North America\",\n",
     "                      cmap = \"coolwarm\", ax = ax, s = 50)\n",
     "ax.set_title(str(year), fontsize = 50)"
    ]
@@ -1080,7 +1082,9 @@
     "\n",
     "plot_data = data[data.index.get_level_values(\"Year\")== datetime.datetime(year,1,1)]\n",
     "fig, ax = plt.subplots(figsize = (24, 16))\n",
-    "plot_data.plot.scatter(x = \"EFW\", y = \"RGDP Per Capita\", c = \"North America\",\n",
+    "plot_data.plot.scatter(x = \"EFW\", \n",
+    "                       y = \"RGDP Per Capita\", \n",
+    "                       c = \"North America\",\n",
     "                      cmap = cmap, ax = ax, norm = norm, s = 50)\n",
     "\n",
     "# to remove numbers between 0 and 1, access the color axis through plt.gcf()\n",
