--- a/Projects/Glyphs/Scatter and Correlation Cleaned.ipynb
+++ b/Projects/Glyphs/Scatter and Correlation Cleaned.ipynb
@@ -1123,7 +1123,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1137,7 +1137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
