update, fix jdc import err

--- a/Projects/SMP Data/Untitled.ipynb
+++ b/Projects/SMP Data/Untitled.ipynb
@@ -1431,7 +1431,11 @@
    "id": "1ddf95ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "3yma_list = [\"a\", \"b\", \"c\"]\n",
+    "for name in 3yma_list:\n",
+    "    data[name + \"_3YMA\"] = data[name].rolling(3).mean().shift()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1452,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4faca117",
+   "id": "68a2617a",
    "metadata": {},
    "outputs": [],
    "source": []
